--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             <img src="images/cloud1.png" alt="Cloud" class="cloud cloud-1">
             <img src="images/cloud2.png" alt="Cloud" class="cloud cloud-2">
             <img src="images/cloud3.png" alt="Cloud" class="cloud cloud-3">
-            <img src="images/hero-bg2.png" alt="Eskişehir Skyline" class="city-skyline">
+            <img src="images/hero-bg3.jpg" alt="Eskişehir Skyline" class="city-skyline">
         </div>
         <div class="hero-content" data-aos="fade-up">
             <h1>Eskişehir'de Öğrenci Olmak</h1>
@@ -39,7 +39,7 @@
         <div class="horizontal-scroll-container">
             <div class="feature-grid">
                 <div class="feature-item" data-aos="fade-up">
-                    <img src="images/porsuk-river.jpg" alt="Porsuk Çayı">
+                    <img src="images/social.jpg" alt="Porsuk Çayı">
                     <h3>Canlı Sosyal Hayat</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
                 </div>
@@ -49,17 +49,17 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac magna vitae felis varius scelerisque.</p>
                 </div>
                 <div class="feature-item" data-aos="fade-up">
-                    <img src="images/campus-life.jpg" alt="Kampüs Hayatı">
+                    <img src="images/campus-life.png" alt="Kampüs Hayatı">
                     <h3>Öğrenci Dostu Şehir</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesentium, voluptatum, quisquam! Natus, quidem.</p>
                 </div>
                 <div class="feature-item" data-aos="fade-up">
                     <img src="images/tram.jpg" alt="Eskişehir Tramvay">
-                    <h3>Modern Ulaşım</h3>
+                    <h3>Şehir İçi Kolay Ulaşım</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
                 </div>
                 <div class="feature-item" data-aos="fade-up">
-                    <img src="images/park.jpg" alt="Sazova Parkı">
+                    <img src="images/park.png" alt="Sazova Parkı">
                     <h3>Geniş Yeşil Alanlar</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
                 </div>
