--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <a href="#hero" class="site-logo">
+    <a href="#hero" class="site-logo" id="siteLogo">
         <img src="images/sie-logo.png" alt="Study in Eskişehir Logo">
     </a>
 
@@ -74,10 +74,8 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
                 </div>
             </div>
-            <div class="tramway-section">
-                <img src="images/tramvay.png" alt="Eskişehir Tramvayı" class="tramway-image">
-            </div>
         </div>
+        
     </section>
 
     <!-- 3. Üniversiteler -->
@@ -89,16 +87,28 @@
                     <img src="images/anadolu-uni-logo.png" alt="Anadolu Üniversitesi Logo">
                     <h3>Anadolu Üniversitesi</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
+                    <p>
+                        <a href="https://www.anadolu.edu.tr" target="_blank">🌐 Web Sitesi</a><br>
+                        <a href="tel:+902221112233">📞 +90 222 111 22 33</a>
+                    </p>
                 </div>
                 <div class="card" data-aos="fade-in" data-aos-delay="200">
                     <img src="images/estu-logo.png" alt="Eskişehir Teknik Üniversitesi Logo">
-                    <h3>Eskişehir Teknik Üniversitesi (ESTÜ)</h3>
+                    <h3>Eskişehir Teknik Üniversitesi</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
+                    <p>
+                        <a href="https://www.eskisehir.edu.tr" target="_blank">🌐 Web Sitesi</a><br>
+                        <a href="tel:+902224445566">📞 +90 222 444 55 66</a>
+                    </p>
                 </div>
                 <div class="card" data-aos="fade-in" data-aos-delay="300">
                     <img src="images/esogu-logo.png" alt="Eskişehir Osmangazi Üniversitesi Logo">
-                    <h3>Eskişehir Osmangazi Üniversitesi (ESOGÜ)</h3>
+                    <h3>Eskişehir Osmangazi Üniversitesi</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
+                    <p>
+                        <a href="https://www.ogu.edu.tr" target="_blank">🌐 Web Sitesi</a><br>
+                        <a href="tel:+902227778899">📞 +90 222 777 88 99</a>
+                    </p>
                 </div>
             </div>
         </div>
