--- a/public/index.html
+++ b/public/index.html
@@ -4,28 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study in Eskişehir</title>
-    <!-- PRD'de belirtilen AOS kütüphanesi için CSS linki (CDN üzerinden) -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Projenin ana stil dosyası (src klasörüne referans) -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
 
     <a href="#hero" class="site-logo" id="siteLogo">
-        <img src="images/sie-logo.png" alt="Study in Eskişehir Logo">
+        <img src="/images/sie-logo.png" alt="Study in Eskişehir Logo">
     </a>
 
     <!-- 1. Hero Section – Bulutlu Giriş -->
     <header id="hero" class="hero-section">
         <div class="hero-background">
             <!-- Parallax efekti için katmanlı bulutlar -->
-            <img src="images/cloud1.png" alt="Cloud" class="cloud cloud-1">
-            <img src="images/cloud2.png" alt="Cloud" class="cloud cloud-2">
-            <img src="images/cloud3.png" alt="Cloud" class="cloud cloud-3">
-            <img src="images/hero-bg3.jpg" alt="Eskişehir Skyline" class="city-skyline">
+            <img src="/images/cloud1.png" alt="Cloud" class="cloud cloud-1">
+            <img src="/images/cloud2.png" alt="Cloud" class="cloud cloud-2">
+            
+            <img src="/images/hero-bg3.jpg" alt="Eskişehir Skyline" class="city-skyline">
         </div>
         <div class="hero-content" data-aos="fade-up">
-            <h1>Eskişehir'de Öğrenci Olmak</h1>
+            <h1>Öğrencilik Eskişehir'de Yaşanır</h1>
             <p>Türkiye'nin en canlı öğrenci şehrini keşfet.</p>
             <a href="#sehir" class="cta-button">Daha Fazlasını Keşfet</a>
         </div>
@@ -39,38 +37,38 @@
         <div class="horizontal-scroll-container">
             <div class="feature-grid">
                 <div class="feature-item" data-aos="fade-up">
-                    <img src="images/social.jpg" alt="Porsuk Çayı">
+                    <img src="/images/social.jpg" alt="Porsuk Çayı">
                     <h3>Canlı Sosyal Hayat</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
                 </div>
                 <div class="feature-item" data-aos="fade-up">
-                    <img src="images/odunpazari.jpg" alt="Odunpazarı Evleri">
+                    <img src="/images/odunpazari.jpg" alt="Odunpazarı Evleri">
                     <h3>Kültürel Zenginlik</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac magna vitae felis varius scelerisque.</p>
                 </div>
                 <div class="feature-item" data-aos="fade-up">
-                    <img src="images/campus-life.png" alt="Kampüs Hayatı">
+                    <img src="/images/campus-life.png" alt="Kampüs Hayatı">
                     <h3>Öğrenci Dostu Şehir</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesentium, voluptatum, quisquam! Natus, quidem.</p>
                 </div>
                 <div class="feature-item" data-aos="fade-up">
-                    <img src="images/tram.jpg" alt="Eskişehir Tramvay">
+                    <img src="/images/tram.jpg" alt="Eskişehir Tramvay">
                     <h3>Şehir İçi Kolay Ulaşım</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
                 </div>
                 <div class="feature-item" data-aos="fade-up">
-                    <img src="images/park.png" alt="Sazova Parkı">
+                    <img src="/images/park.png" alt="Sazova Parkı">
                     <h3>Geniş Yeşil Alanlar</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
                 </div>
                 <div class="feature-item" data-aos="fade-up">
-                    <img src="images/food.jpg" alt="Yöresel Yemekler">
+                    <img src="/images/food.jpg" alt="Yöresel Yemekler">
                     <h3>Eşsiz Lezzetler</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
                 </div>
                 <div class="feature-item" data-aos="fade-up">
-                    <img src="images/festival.jpg" alt="Festivaller">
-                    <h3>Sürekli Etkinlik</h3>
+                    <img src="/images/festival.jpg" alt="Festivaller">
+                    <h3>Düşük Yaşam Maliyeti</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
                 </div>
             </div>
@@ -84,7 +82,7 @@
             <h2 data-aos="fade-up">Üniversitelerimiz</h2>
             <div class="card-deck">
                 <div class="card" data-aos="fade-in" data-aos-delay="100">
-                    <img src="images/anadolu-uni-logo.png" alt="Anadolu Üniversitesi Logo">
+                    <img src="/images/anadolu-uni-logo.png" alt="Anadolu Üniversitesi Logo">
                     <h3>Anadolu Üniversitesi</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
                     <p>
@@ -93,7 +91,7 @@
                     </p>
                 </div>
                 <div class="card" data-aos="fade-in" data-aos-delay="200">
-                    <img src="images/estu-logo.png" alt="Eskişehir Teknik Üniversitesi Logo">
+                    <img src="/images/estu-logo.png" alt="Eskişehir Teknik Üniversitesi Logo">
                     <h3>Eskişehir Teknik Üniversitesi</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
                     <p>
@@ -102,7 +100,7 @@
                     </p>
                 </div>
                 <div class="card" data-aos="fade-in" data-aos-delay="300">
-                    <img src="images/esogu-logo.png" alt="Eskişehir Osmangazi Üniversitesi Logo">
+                    <img src="/images/esogu-logo.png" alt="Eskişehir Osmangazi Üniversitesi Logo">
                     <h3>Eskişehir Osmangazi Üniversitesi</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
                     <p>
@@ -151,14 +149,6 @@
         </div>
     </footer>
 
-    <!-- PRD'de belirtilen AOS ve GSAP kütüphaneleri için JS script'leri (CDN üzerinden) -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
-   
-    
-</body>
     <!-- Projenin ana JS dosyası (src klasörüne referans) -->
-    <script src="main.js"></script>
-</html>
+    <script type="module" src="/src/js/main.js"></script>
+</body>
