--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,9 @@
             
             <img src="/images/hero-bg3.png" alt="Eskişehir Skyline" class="city-skyline">
         </div>
+        <img src="/images/sie-logo.png" alt="Study in Eskişehir Logo" class="hero-logo">
         <div class="hero-content" data-aos="fade-up">
-            <h1>Eskişehir'de Öğrenci Olmak</h1>
+            <h1>Öğrencilik Eskişehir'de Yaşanır</h1>
             <p>Türkiye'nin en canlı öğrenci şehrini keşfet.</p>
             <a href="#sehir" class="cta-button">Daha Fazlasını Keşfet</a>
         </div>
@@ -34,6 +35,7 @@
             <h2 data-aos="fade-up">Neden Eskişehir?</h2>
         </div>
         <div class="horizontal-scroll-container">
+            <div class="horizontal-line"></div>
             <div class="feature-grid">
                 <div class="feature-item" data-aos="fade-up">
                     <img src="/images/social.jpg" alt="Porsuk Çayı">
