--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <img src="/images/cloud1.png" alt="Cloud" class="cloud cloud-1">
             <img src="/images/cloud2.png" alt="Cloud" class="cloud cloud-2">
             
-            <img src="/images/hero-bg3.jpg" alt="Eskişehir Skyline" class="city-skyline">
+            <img src="/images/hero-bg3a.png" alt="Eskişehir Skyline" class="city-skyline">
         </div>
         <div class="hero-content" data-aos="fade-up">
             <h1>Öğrencilik Eskişehir'de Yaşanır</h1>
@@ -79,7 +79,7 @@
     <!-- 3. Üniversiteler -->
     <section id="universiteler" class="section bg-light">
         <div class="container">
-            <h2 data-aos="fade-up">Üniversitelerimiz</h2>
+            <h2 data-aos="fade-up">Nerede Eğitim Almalı?</h2>
             <div class="card-deck">
                 <div class="card" data-aos="fade-in" data-aos-delay="100">
                     <img src="/images/anadolu-uni-logo.png" alt="Anadolu Üniversitesi Logo">
@@ -115,10 +115,10 @@
     <!-- 4. Öğrenci Deneyimleri -->
     <section id="deneyimler" class="section">
         <div class="container">
-            <h2 data-aos="fade-up">Öğrenci Gözünden Eskişehir</h2>
+            <h2 data-aos="fade-up">Videolar</h2>
             <div class="video-container" data-aos="zoom-in">
                 <!-- YouTube embed (lazy-loaded) -->
-                <iframe width="560" height="315" src="https://youtu.be/in_sSjV5Mq4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                <iframe width="560" height="315" src="https://youtu.be/in_sSjV5Mq4?si=Po74UfKGL2LjYwwi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
             </div>
         </div>
     </section>
