--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,12 @@
             <img src="/images/cloud1.png" alt="Cloud" class="cloud cloud-1">
             <img src="/images/cloud2.png" alt="Cloud" class="cloud cloud-2">
             
-            <img src="/images/hero-bg3.png" alt="Eskişehir Skyline" class="city-skyline">
+            <div class="hero-background-pieces">
+                <img src="/images/hero-bg3a-bottom-right.png" alt="Eskişehir Skyline Piece" class="bg-piece bottom-right">
+                <img src="/images/hero-bg3a-center.png" alt="Eskişehir Skyline Piece" class="bg-piece center">
+                <img src="/images/hero-bg3a-center-left.png" alt="Eskişehir Skyline Piece" class="bg-piece center-left">
+                <img src="/images/hero-bg3a-center-right.png" alt="Eskişehir Skyline Piece" class="bg-piece center-right">
+            </div>
         </div>
         <img src="/images/sie-logo.png" alt="Study in Eskişehir Logo" class="hero-logo">
         <div class="hero-content" data-aos="fade-up">
@@ -80,7 +85,7 @@
     <!-- 3. Üniversiteler -->
     <section id="universiteler" class="section bg-light">
         <div class="container">
-            <h2 data-aos="fade-up">Üniversitelerimiz</h2>
+            <h2 data-aos="fade-up">Nerede Eğitim Almalı?</h2>
             <div class="card-deck">
                 <div class="card" data-aos="fade-in" data-aos-delay="100">
                     <img src="/images/anadolu-uni-logo.png" alt="Anadolu Üniversitesi Logo">
