--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
             <h2 data-aos="fade-up">Videolar</h2>
             <div class="video-container" data-aos="zoom-in">
                 <!-- YouTube embed (lazy-loaded) -->
-                <iframe width="560" height="315" src="https://youtu.be/in_sSjV5Mq4?si=Po74UfKGL2LjYwwi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bzYFGMLvfzc?si=31uTPqHG7J4dC3Pr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </section>
