--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study in Eskişehir</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/node_modules/aos/dist/aos.css" />
 </head>
 <body>
 
@@ -91,28 +92,63 @@
                     <img src="/images/anadolu-uni-logo.png" alt="Anadolu Üniversitesi Logo">
                     <h3>Anadolu Üniversitesi</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
-                    <p>
-                        <a href="https://www.anadolu.edu.tr" target="_blank">🌐 Web Sitesi</a><br>
-                        <a href="tel:+902221112233">📞 +90 222 111 22 33</a>
+                    <p class="contact-icons">
+                        <a href="https://www.anadolu.edu.tr" target="_blank"><img src="/images/arrow.png" alt="Web Sitesi"></a>
+                        <a href="tel:+902221112233"><img src="/images/phone.png" alt="Telefon"></a>
                     </p>
                 </div>
                 <div class="card" data-aos="fade-in" data-aos-delay="200">
                     <img src="/images/estu-logo.png" alt="Eskişehir Teknik Üniversitesi Logo">
                     <h3>Eskişehir Teknik Üniversitesi</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
-                    <p>
-                        <a href="https://www.eskisehir.edu.tr" target="_blank">🌐 Web Sitesi</a><br>
-                        <a href="tel:+902224445566">📞 +90 222 444 55 66</a>
+                    <p class="contact-icons">
+                        <a href="https://www.eskisehir.edu.tr" target="_blank"><img src="/images/arrow.png" alt="Web Sitesi"></a>
+                        <a href="tel:+902224445566"><img src="/images/phone.png" alt="Telefon"></a>
                     </p>
                 </div>
                 <div class="card" data-aos="fade-in" data-aos-delay="300">
                     <img src="/images/esogu-logo.png" alt="Eskişehir Osmangazi Üniversitesi Logo">
                     <h3>Eskişehir Osmangazi Üniversitesi</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat.</p>
-                    <p>
-                        <a href="https://www.ogu.edu.tr" target="_blank">🌐 Web Sitesi</a><br>
-                        <a href="tel:+902227778899">📞 +90 222 777 88 99</a>
+                    <p class="contact-icons">
+                        <a href="https://www.ogu.edu.tr" target="_blank"><img src="/images/arrow.png" alt="Web Sitesi"></a>
+                        <a href="tel:+902227778899"><img src="/images/phone.png" alt="Telefon"></a>
                     </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 4. Nasıl Başvurmalı -->
+    <section id="nasil-basvurmalı" class="section">
+        <div class="container">
+            <h2>Nasıl Başvurmalı?</h2>
+            <div class="apply-options">
+                <div class="apply-option">
+                    <div class="card-face card-front">
+                        <h3>Değişim Öğrencileri</h3>
+                    </div>
+                    <div class="card-face card-back">
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                            <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                            <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</li>
+                            <li>Nisi ut aliquip ex ea commodo consequat.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="apply-option">
+                    <div class="card-face card-front full-time-student-card-front">
+                        <h3>Tam Zamanlı Öğrenciler</h3>
+                    </div>
+                    <div class="card-face card-back">
+                        <ul>
+                            <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</li>
+                            <li>Dolore eu fugiat nulla pariatur.</li>
+                            <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</li>
+                            <li>Deserunt mollit anim id est laborum.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -121,11 +157,11 @@
     <!-- 4. Öğrenci Deneyimleri -->
     <section id="deneyimler" class="section">
         <div class="container">
-            <h2 data-aos="fade-up">Öğrenci Gözünden Eskişehir</h2>
+            <h2 data-aos="fade-up">Videolar</h2>
             <div class="video-container" data-aos="zoom-in">
                 <!-- YouTube embed (lazy-loaded) -->
-                <iframe width="560" height="315" src="https://youtu.be/in_sSjV5Mq4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy"></iframe>
-            </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/in_sSjV5Mq4?si=y8dXWcL0uCgd8yup" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bzYFGMLvfzc?si=31uTPqHG7J4dC3Pr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            </div>
         </div>
     </section>
 
@@ -133,11 +169,20 @@
     <section id="etkinlikler" class="section bg-light">
         <div class="container">
             <h2 data-aos="fade-up">Yaklaşan Etkinlikler</h2>
-            <ul class="event-list">
-                <li data-aos="fade-up" data-aos-delay="100"><span>15 AĞU</span> Bahar Festivali Konserleri</li>
-                <li data-aos="fade-up" data-aos-delay="200"><span>22 AĞU</span> Uluslararası Film Günleri</li>
-                <li data-aos="fade-up" data-aos-delay="300"><span>05 EYL</span> Kampüse Hoş Geldin Partisi</li>
-            </ul>
+            <div class="event-grid">
+                <div class="event-card" data-aos="fade-up" data-aos-delay="100">
+                    <div class="event-date">15 AĞU</div>
+                    <div class="event-title">Bahar Festivali Konserleri</div>
+                </div>
+                <div class="event-card" data-aos="fade-up" data-aos-delay="200">
+                    <div class="event-date">22 AĞU</div>
+                    <div class="event-title">Uluslararası Film Günleri</div>
+                </div>
+                <div class="event-card" data-aos="fade-up" data-aos-delay="300">
+                    <div class="event-date">05 EYL</div>
+                    <div class="event-title">Kampüse Hoş Geldin Partisi</div>
+                </div>
+            </div>
         </div>
     </section>
 
